<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRecord">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_faf9ff"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/record_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_dimen_58"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/record_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_dimen_24"
                    android:src="@drawable/recode_left" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/record_title"
                    android:textColor="@color/common_black_000000"
                    android:textSize="@dimen/common_size_16"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/record_layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_layout"
                android:background="#FAF9FF"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/record_warn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_dimen_20"
                    android:layout_marginTop="@dimen/common_dimen_20"
                    android:layout_marginRight="@dimen/common_dimen_20"
                    android:text="@string/record_warn"
                    android:textColor="@color/common_9B9CB2"
                    android:textSize="@dimen/common_size_12"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/record_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/record_warn"
                    android:layout_marginLeft="@dimen/common_dimen_20"
                    android:layout_marginTop="@dimen/common_dimen_10"
                    android:layout_marginRight="@dimen/common_dimen_20"
                    android:textColor="@color/common_black_222222"
                    android:textSize="@dimen/common_size_14"
                    android:textStyle="bold"
                    tools:text="test" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/record_layout_top"
                android:background="@drawable/record_layout_play"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/common_dimen_20"
                android:paddingRight="@dimen/common_dimen_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_dimen_200"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/common_dimen_20"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/btn_audio"
                            android:layout_width="50dp"
                            android:layout_height="@dimen/common_dimen_50"
                            android:layout_gravity="center"
                            android:background="@drawable/maikefeng_icon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center_horizontal"
                            android:text="@string/record_stare"
                            android:textColor="@color/common_4a4a4a"
                            android:textSize="@dimen/common_size_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/stop_audio"
                            android:layout_width="@dimen/common_dimen_50"
                            android:layout_height="@dimen/common_dimen_50"
                            android:layout_gravity="center"
                            android:background="@drawable/zanting" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center_horizontal"
                            android:text="@string/record_stop"
                            android:textColor="@color/common_4a4a4a"
                            android:textSize="@dimen/common_size_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/playAudio"
                            android:layout_width="@dimen/common_dimen_50"
                            android:layout_height="@dimen/common_dimen_50"
                            android:layout_gravity="center"
                            android:background="@drawable/bofang" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/record_play"
                            android:textColor="@color/common_4a4a4a"
                            android:textSize="@dimen/common_size_14" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/common_dimen_100"
                    android:layout_marginBottom="@dimen/common_dimen_24"
                    android:background="@drawable/all_btn_bg"
                    android:gravity="center"
                    android:onClick="@{() -> recordViewModel.submit()}"
                    android:text="@string/record_submit"
                    android:textColor="@color/common_white_FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>