<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/tab_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/major_tab_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Account"
        android:textColor="@color/black"
        android:textSize="@dimen/common_dimen_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />
    <ImageButton
        android:id="@+id/rec_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/major_tab_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rec_btn"
        android:text="Record"
        android:textColor="@color/black"
        android:textSize="@dimen/common_dimen_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <ImageButton
        android:id="@+id/aud_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/audio_tab_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Audio"
        android:textColor="@color/black"
        android:textSize="@dimen/common_dimen_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/record_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_dimen_58"
                android:layout_marginBottom="@dimen/common_dimen_24"
                android:gravity="center"
                android:text="@string/home_recording_list"
                android:textColor="@color/black"
                android:textSize="@dimen/common_size_16" />

            <LinearLayout
                android:id="@+id/home_data_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_title"
                android:layout_marginLeft="@dimen/common_dimen_16"
                android:layout_marginTop="@dimen/common_dimen_2"
                android:layout_marginRight="@dimen/common_dimen_16"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="68dp"
                    android:gravity="center"
                    android:visibility="visible"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/my_textview_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_recording_left"
                        android:textColor="@color/black"
                        android:visibility="visible"
                        android:textSize="@dimen/common_size_14"
                        />
                    <View
                        android:id="@+id/home_data_waiting_view"
                        android:layout_width="@dimen/common_dimen_24"
                        android:layout_height="@dimen/common_dimen_4"
                        android:layout_marginTop="@dimen/common_dimen_4"
                        android:visibility="visible"
                        android:background="#6566ff" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="182dp"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/my_textview_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_recording_right"
                        android:textColor="#4F5060"
                        android:visibility="visible" />
                    <View
                        android:id="@+id/home_data_finish_view"
                        android:layout_width="@dimen/common_dimen_24"
                        android:layout_height="@dimen/common_dimen_4"
                        android:layout_marginTop="@dimen/common_dimen_4"
                        android:background="#4F5060"
                        android:visibility="invisible" />

                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_1"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="175dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="15dp"/>

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>